* RoomDescriptor.OverrideData is no longer forcibly changed by RoomDescriptor.FLAG_SURPRISE_MINIBOSS
/newline/
Modified:
* Isaac:
	PlayCutscene(CutsceneID, ClearGameState = false)
* Game:
	SetDizzyAmount(TargetIntensity, CurrentIntensity) - Providing CurrentIntensity is now optional
* EntityNPC:
	ShootMaggotProjectile(Position, Target, FallingSpeed = -8.0, YOffset = -24.0)
* Callbacks:
	- MC_PLAYER_GET_ACTIVE_MAX_CHARGE / MC_PLAYER_GET_ACTIVE_MIN_USABLE_CHARGE
		Will no longer run for empty active item slots.
		Now provide the current charge value as an argument.
		Returning a value no longer stops the callback, and changes the charge value passed to the next callback.
		If the final result of the callback is <0, the result is treated as 0.
* The game no longer prematurely ends the daily run if there was console input, instead blocking it
/newline/
Fixes:
* Game():GetDizzyAmount() now returns the intended value, instead of 0
* Fixed MC_PRE_PLANETARIUM_APPLY_TREASURE_PENALTY not providing the current number of treasure rooms visited.
* Fixed binders for EntityNPC: ThrowMaggot, ShootMaggotProjectile functions.
/newline/
v1.0.9d -
Fixes:
* Fixed a bug with the autoupdater
/newline/
v1.0.9c -
Fixes:
* Fixed a bug in 1.0.9b where all cutscenes were being replaced by the intro cutscene if any mods were enabled.
/newline/
v1.0.9b -
Additions:
* Camera:
	- IsPosVisible(position: Vector) : bool
* Game:
	- RecordPlayerCompletion(CompletionType)
* ModCallbacks:
	- MC_POST_COMPLETION_EVENT
		POST version of MC_PRE_COMPLETION_EVENT. Called when a player completes something that would award a mark (end bosses, tainted unlocks)
* Add new Vanilla Tweaks option "Mars Double Tap Window", which determines the number of frames where a repeated movement input is counted as a double tap for activating Mars's charge
* Updater now runs asynchronously, meaning that you should no longer encounter the "white screen" issue.
* Improved mods' startup speed once again!